syntax = "proto3";

package proto;

message Resource {
  string name = 1;
  Kind kind = 2;

  enum Kind {
    UNKNOWN = 0;
    TABLE = 1;
    VIEW = 2;
    STORED_PROC = 3;
  }
}

message ListRequest {}

message ListResponse {
  repeated Resource resources = 1;
}

service Database {
  rpc List(ListRequest) returns (ListResponse);
}
